--- a/Book_mongo/public/style.css
+++ b/Book_mongo/public/style.css
@@ -89,6 +89,7 @@ header{
 .book {
     border: 1px solid #ddd;
     border-radius: 8px;
+    /* height: 500px; */
     width: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 16px;
